--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <h3>Pot-Limit Hold-Em</h3>
 
-    <p>We seem to prefer pot limit Texas Hold-em. "Pot limit" is a happy medium between strict "limit poker" and the wild chaos of no limit poker. When a betting round reaches you, you'll have as many as four options:</p> 
+    <p>We seem to prefer pot limit Texas Hold-em. Buy-in is $10 with a maximum of two rebuys. "Pot limit" is a happy medium between strict "limit poker" and the wild chaos of no limit poker. When a betting round reaches you, you'll have as many as four options:</p> 
 
 <ol>
     <LI><strong>Check.</strong> Tapping the table is a shortcut for this. It means "no bet." If someone before you made a bet during this betting round, then you aren't allowed to check.</LI>
