--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <input type="radio" name="venue" value="yes"> Yes
             </label><br>
             <label>
-                <input type="radio" name="venue" value="needmore"> Yes, subject to cancellation if we're short handed. Go recruit and check back later to confirm
+                <input type="radio" name="venue" value="needmore"> Yes, if we have enough players. Check back around 6
             </label><br>
             <label>
                 <input type="radio" name="venue" value="no"> No
