--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
 
         <h4>What are we in the mood for?</h4>
 
-        <div id="activityThreadDisplay"></div>
+        <div id="activityThreadDisplay"
+     style="font-family: ui-monospace, Menlo, Consolas, monospace; white-space: pre-line; line-height:1.4;"></div>
         <input id="activityInput" type="text" placeholder="Something fun">
 
         
