--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CARDS CARDS CARDS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?v=2">
 </head>
 <body>
 
@@ -110,8 +110,7 @@
 
         <h4>What are we in the mood for?</h4>
 
-        <div id="activityThreadDisplay"
-     style="font-family: ui-monospace, Menlo, Consolas, monospace; white-space: pre-line; line-height:1.4;"></div>
+        <div id="activityThreadDisplay"></div>
         <input id="activityInput" type="text" placeholder="Something fun">
 
         
